# CMinMin

./: CMakeLists.txt  README.md  W4-1  W4-2  main.cpp
Week2/: opdr1.cpp  opdr2.cpp  opdr3.cpp  opdr4.cpp  opdr5.cpp  opdr6.cpp
Week3/: W3-1.cpp  W3-2.cpp  W3-3.cpp  W3-4.cpp  W3-5.cpp  W3-6.cpp
Week4/: W4-1.cpp  W4-2.cpp  W4-3.cpp  W4-4.cpp
