cmake_minimum_required(VERSION 3.30)
project(teting)

set(CMAKE_CXX_STANDARD 20)

add_executable(teting main.cpp
        Week2/opdr1.cpp
        Week2/opdr3.cpp
        Week2/opdr4.cpp
        Week2/opdr5.cpp
        Week2/opdr6.cpp
        Week3/W3-1.cpp
        Week3/W3-2.cpp
        Week3/W3-3.cpp
        Week3/W3-4.cpp
        Week3/W3-5.cpp
        Week3/W3-6.cpp
)
